fixed signup form spacing

--- a/event-planner/src/App.css
+++ b/event-planner/src/App.css
@@ -232,7 +232,7 @@ border-color: black;
 }
 
 .signup-form{
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 .signup-btn{
